# OrientedPointSampling

./: CMakeLists.txt  README.md
include/: Ops.h
src/: Ops.cpp  main.cpp
